Fix java.lang.reflect.InaccessibleObjectException